--- a/.github/workflows/main-workflow.yaml
+++ b/.github/workflows/main-workflow.yaml
@@ -17,7 +17,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install --requirements requirements.txt
+          pip install --requirement requirements.txt
       - name: Make autoformatting
         run: |
           black ./
