--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,13 @@
 #Clear code
 black==22.10.0
-
-flake8==5.0.4
-
+flake8==6.0.0
 pre-commit==2.20.0
+
+#Random Generation
+Faker==15.3.4
+
+#Flask
+Flask==2.2.2
+
+#Requests
+requests==2.28.1
